# FaceDetection-YOLO4-jetsonNano

./: Makefile  README.md  faceDetectImage.cpp  faceDetectionVideo.cpp  face_detection.py  main.cpp  make_annotation.py
QtOpencvQml/: CMakeLists.txt  Makefile  QtOpencvQml.pro  main.cpp
yolo/: obj.data  yolov4-tiny-3l.cfg
